4.0.0 - Image Editor - Paint - Bucket Tool - Fill doesn't work as expected #114963

Closed
opened 2023-11-16 06:48:46 +01:00 by shadsterwolf1 · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
(Same issue also in 4.0.1 and 4.1.0 alpha)
Worked: 3.6.5 LTS

Caused by 406cfd214a.

Short description of error
Image Editor's Bucket Tool Fill operation doesn't work as expected

Exact steps for others to reproduce the error

  1. New Project (Default Startup/Load Defaults)
  2. Texture Paint Workspace
  3. Image Editor Area, New Image (Defaults)
  4. Bucket Tool
  5. Attempt to fill image with color, get 1px change instead

Adjusting the Fill Threshold (Tool Settings Bar > Advanced > Fill Threshold) around 0.6 will work from dark to light, but not light to dark even with threshold at 1

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` (Same issue also in 4.0.1 and 4.1.0 alpha) Worked: 3.6.5 LTS Caused by 406cfd214a. **Short description of error** Image Editor's Bucket Tool Fill operation doesn't work as expected **Exact steps for others to reproduce the error** 1. New Project (Default Startup/Load Defaults) 2. Texture Paint Workspace 3. Image Editor Area, New Image (Defaults) 4. Bucket Tool 5. Attempt to fill image with color, get 1px change instead Adjusting the Fill Threshold (Tool Settings Bar > Advanced > Fill Threshold) around 0.6 will work from dark to light, but not light to dark even with threshold at 1
shadsterwolf1 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 06:48:46 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser self-assigned this 2023-11-16 14:10:24 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-16 17:09:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114963
No description provided.