Fix #114963: Image Editor - Fill Tool doesn't work as expected

Caused by 406cfd214aaa.

Was only filling a single pixel.

Some pointer magic wasnt working after culprit commit.
Now changed to a more common way of accessing.

Pull Request: https://projects.blender.org/blender/blender/pulls/114989